<resources>
    <string name="app_name">Premier League Fixtures</string>
    <string name="str_to_fragment_2">Go to Fragment 2</string>
    <string name="str_to_fragment_1">Go to Fragment 1</string>
    <string name="switch_to_fragments">Match 1/Match 2</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="MatchNumber_name">Match Number:</string>
    <string name="MatchNumber_value">1</string>

    <string name="RoundNumber_name">Round Number:</string>
    <string name="RoundNumber_value">1</string>

    <string name="DateUTC_name">Date UTC:</string>
    <string name="DateUTC_value">2021–08–13 19:00:00Z</string>

    <string name="Location_name">Location:</string>
    <string name="Location_value">Brentford Community Stadium</string>

    <string name="HomeTeam_name">Home Team:</string>
    <string name="HomeTeam_value">Brentford</string>

    <string name="AwayTeam_name">Away Team:</string>
    <string name="AwayTeam_value">Arsenal</string>

    <string name="Group_name">Group:</string>
    <string name="Group_value">No</string>

    <string name="HomeTeamScore_name">Score of home team:</string>
    <string name="HomeTeamScore_value">2</string>

    <string name="AwayTeamScore_name">Score of away team:</string>
    <string name="AwayTeamScore_value">0</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>